[package]
name = "connect_puzzle"
version = "0.1.0"
authors = ["A. Bram Neijt <bram@neijt.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = {version="0.8.1", features = ["pdf", "png"]}
rand = "0.7"
rand_chacha = "0.2"